src/lief/grammar/LiefParser.java
// $ANTLR 3.5 C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g 2013-06-30 19:47:08

package lief.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class LiefParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANDERS", "BEGIN", "BLIJE", "BY", 
		"CHARACTER", "COMMENT", "DAN", "DIGIT", "DIVIDE", "EEN", "EN", "GROOTST", 
		"GROTER", "H", "HARTJE", "IDENTIFIER", "IS", "KLAAR", "KLEINER", "KLEINST", 
		"LAAT", "LETTER", "LOWER", "LPAREN", "MAAR", "MIN", "ML_COMMENT", "MODULO", 
		"MULTIPLY", "NEGATIEF", "NIET", "NUMBER", "OF", "PERIOD", "PLUS", "POSITIEF", 
		"PROGRAM", "QUOT", "RPAREN", "SMILEY", "STEENTJE", "UPPER", "VARIABLE", 
		"VRAAG", "WORDT", "WS", "ZEG", "ZOALS", "ZOLANG"
	};
	public static final int EOF=-1;
	public static final int ANDERS=4;
	public static final int BEGIN=5;
	public static final int BLIJE=6;
	public static final int BY=7;
	public static final int CHARACTER=8;
	public static final int COMMENT=9;
	public static final int DAN=10;
	public static final int DIGIT=11;
	public static final int DIVIDE=12;
	public static final int EEN=13;
	public static final int EN=14;
	public static final int GROOTST=15;
	public static final int GROTER=16;
	public static final int H=17;
	public static final int HARTJE=18;
	public static final int IDENTIFIER=19;
	public static final int IS=20;
	public static final int KLAAR=21;
	public static final int KLEINER=22;
	public static final int KLEINST=23;
	public static final int LAAT=24;
	public static final int LETTER=25;
	public static final int LOWER=26;
	public static final int LPAREN=27;
	public static final int MAAR=28;
	public static final int MIN=29;
	public static final int ML_COMMENT=30;
	public static final int MODULO=31;
	public static final int MULTIPLY=32;
	public static final int NEGATIEF=33;
	public static final int NIET=34;
	public static final int NUMBER=35;
	public static final int OF=36;
	public static final int PERIOD=37;
	public static final int PLUS=38;
	public static final int POSITIEF=39;
	public static final int PROGRAM=40;
	public static final int QUOT=41;
	public static final int RPAREN=42;
	public static final int SMILEY=43;
	public static final int STEENTJE=44;
	public static final int UPPER=45;
	public static final int VARIABLE=46;
	public static final int VRAAG=47;
	public static final int WORDT=48;
	public static final int WS=49;
	public static final int ZEG=50;
	public static final int ZOALS=51;
	public static final int ZOLANG=52;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LiefParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LiefParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return LiefParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:65:1: program : ( sentence )* EOF -> ^( PROGRAM ( sentence )* ) ;
	public final LiefParser.program_return program() throws RecognitionException {
		LiefParser.program_return retval = new LiefParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope sentence1 =null;

		Object EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_sentence=new RewriteRuleSubtreeStream(adaptor,"rule sentence");

		try {
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:66:5: ( ( sentence )* EOF -> ^( PROGRAM ( sentence )* ) )
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:66:9: ( sentence )* EOF
			{
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:66:9: ( sentence )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( ((LA1_0 >= BEGIN && LA1_0 <= BLIJE)||LA1_0==CHARACTER||LA1_0==HARTJE||LA1_0==LAAT||LA1_0==LPAREN||(LA1_0 >= NEGATIEF && LA1_0 <= NUMBER)||LA1_0==POSITIEF||(LA1_0 >= SMILEY && LA1_0 <= STEENTJE)||(LA1_0 >= VARIABLE && LA1_0 <= VRAAG)||LA1_0==ZEG||LA1_0==ZOLANG) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:66:10: sentence
					{
					pushFollow(FOLLOW_sentence_in_program863);
					sentence1=sentence();
					state._fsp--;

					stream_sentence.add(sentence1.getTree());
					}
					break;

				default :
					break loop1;
				}
			}

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program867);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: sentence
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 67:13: -> ^( PROGRAM ( sentence )* )
			{
				// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:67:17: ^( PROGRAM ( sentence )* )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:67:27: ( sentence )*
				while ( stream_sentence.hasNext() ) {
					adaptor.addChild(root_1, stream_sentence.nextTree());
				}
				stream_sentence.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class sentence_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "sentence"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:70:1: sentence : ( ( command | declaration ) PERIOD !) ;
	public final LiefParser.sentence_return sentence() throws RecognitionException {
		LiefParser.sentence_return retval = new LiefParser.sentence_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PERIOD5=null;
		ParserRuleReturnScope command3 =null;
		ParserRuleReturnScope declaration4 =null;

		Object PERIOD5_tree=null;

		try {
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:5: ( ( ( command | declaration ) PERIOD !) )
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:9: ( ( command | declaration ) PERIOD !)
			{
			root_0 = (Object)adaptor.nil();


			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:9: ( ( command | declaration ) PERIOD !)
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:10: ( command | declaration ) PERIOD !
			{
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:10: ( command | declaration )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( ((LA2_0 >= BEGIN && LA2_0 <= BLIJE)||LA2_0==CHARACTER||LA2_0==LAAT||LA2_0==LPAREN||(LA2_0 >= NEGATIEF && LA2_0 <= NUMBER)||LA2_0==POSITIEF||LA2_0==SMILEY||(LA2_0 >= VARIABLE && LA2_0 <= VRAAG)||LA2_0==ZEG||LA2_0==ZOLANG) ) {
				alt2=1;
			}
			else if ( (LA2_0==HARTJE||LA2_0==STEENTJE) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:11: command
					{
					pushFollow(FOLLOW_command_in_sentence914);
					command3=command();
					state._fsp--;

					adaptor.addChild(root_0, command3.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:71:21: declaration
					{
					pushFollow(FOLLOW_declaration_in_sentence918);
					declaration4=declaration();
					state._fsp--;

					adaptor.addChild(root_0, declaration4.getTree());

					}
					break;

			}

			PERIOD5=(Token)match(input,PERIOD,FOLLOW_PERIOD_in_sentence921); 
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "sentence"


	public static class command_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "command"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:74:1: command : ( expression | ifCommand | emptyCommand | whileCommand );
	public final LiefParser.command_return command() throws RecognitionException {
		LiefParser.command_return retval = new LiefParser.command_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope expression6 =null;
		ParserRuleReturnScope ifCommand7 =null;
		ParserRuleReturnScope emptyCommand8 =null;
		ParserRuleReturnScope whileCommand9 =null;


		try {
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:75:5: ( expression | ifCommand | emptyCommand | whileCommand )
			int alt3=4;
			switch ( input.LA(1) ) {
			case BEGIN:
			case CHARACTER:
			case LPAREN:
			case NEGATIEF:
			case NIET:
			case NUMBER:
			case POSITIEF:
			case SMILEY:
			case VARIABLE:
			case VRAAG:
			case ZEG:
				{
				alt3=1;
				}
				break;
			case BLIJE:
				{
				alt3=2;
				}
				break;
			case LAAT:
				{
				alt3=3;
				}
				break;
			case ZOLANG:
				{
				alt3=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:75:9: expression
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_expression_in_command946);
					expression6=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression6.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:76:9: ifCommand
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ifCommand_in_command956);
					ifCommand7=ifCommand();
					state._fsp--;

					adaptor.addChild(root_0, ifCommand7.getTree());

					}
					break;
				case 3 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:77:9: emptyCommand
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_emptyCommand_in_command966);
					emptyCommand8=emptyCommand();
					state._fsp--;

					adaptor.addChild(root_0, emptyCommand8.getTree());

					}
					break;
				case 4 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:78:9: whileCommand
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_whileCommand_in_command976);
					whileCommand9=whileCommand();
					state._fsp--;

					adaptor.addChild(root_0, whileCommand9.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "command"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:81:1: declaration : ( HARTJE ^ IDENTIFIER IS ! EEN ! type | STEENTJE ^ IDENTIFIER WORDT ! expression );
	public final LiefParser.declaration_return declaration() throws RecognitionException {
		LiefParser.declaration_return retval = new LiefParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token HARTJE10=null;
		Token IDENTIFIER11=null;
		Token IS12=null;
		Token EEN13=null;
		Token STEENTJE15=null;
		Token IDENTIFIER16=null;
		Token WORDT17=null;
		ParserRuleReturnScope type14 =null;
		ParserRuleReturnScope expression18 =null;

		Object HARTJE10_tree=null;
		Object IDENTIFIER11_tree=null;
		Object IS12_tree=null;
		Object EEN13_tree=null;
		Object STEENTJE15_tree=null;
		Object IDENTIFIER16_tree=null;
		Object WORDT17_tree=null;

		try {
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:82:5: ( HARTJE ^ IDENTIFIER IS ! EEN ! type | STEENTJE ^ IDENTIFIER WORDT ! expression )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==HARTJE) ) {
				alt4=1;
			}
			else if ( (LA4_0==STEENTJE) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:82:9: HARTJE ^ IDENTIFIER IS ! EEN ! type
					{
					root_0 = (Object)adaptor.nil();


					HARTJE10=(Token)match(input,HARTJE,FOLLOW_HARTJE_in_declaration995); 
					HARTJE10_tree = (Object)adaptor.create(HARTJE10);
					root_0 = (Object)adaptor.becomeRoot(HARTJE10_tree, root_0);

					IDENTIFIER11=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declaration998); 
					IDENTIFIER11_tree = (Object)adaptor.create(IDENTIFIER11);
					adaptor.addChild(root_0, IDENTIFIER11_tree);

					IS12=(Token)match(input,IS,FOLLOW_IS_in_declaration1000); 
					EEN13=(Token)match(input,EEN,FOLLOW_EEN_in_declaration1003); 
					pushFollow(FOLLOW_type_in_declaration1006);
					type14=type();
					state._fsp--;

					adaptor.addChild(root_0, type14.getTree());

					}
					break;
				case 2 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:83:9: STEENTJE ^ IDENTIFIER WORDT ! expression
					{
					root_0 = (Object)adaptor.nil();


					STEENTJE15=(Token)match(input,STEENTJE,FOLLOW_STEENTJE_in_declaration1016); 
					STEENTJE15_tree = (Object)adaptor.create(STEENTJE15);
					root_0 = (Object)adaptor.becomeRoot(STEENTJE15_tree, root_0);

					IDENTIFIER16=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_declaration1019); 
					IDENTIFIER16_tree = (Object)adaptor.create(IDENTIFIER16);
					adaptor.addChild(root_0, IDENTIFIER16_tree);

					WORDT17=(Token)match(input,WORDT,FOLLOW_WORDT_in_declaration1021); 
					pushFollow(FOLLOW_expression_in_declaration1024);
					expression18=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression18.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class ifCommand_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ifCommand"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:86:1: ifCommand : BLIJE ^ exprBin ( DAN ( sentence )+ ) ( ANDERS ( sentence )+ ) KLAAR !;
	public final LiefParser.ifCommand_return ifCommand() throws RecognitionException {
		LiefParser.ifCommand_return retval = new LiefParser.ifCommand_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token BLIJE19=null;
		Token DAN21=null;
		Token ANDERS23=null;
		Token KLAAR25=null;
		ParserRuleReturnScope exprBin20 =null;
		ParserRuleReturnScope sentence22 =null;
		ParserRuleReturnScope sentence24 =null;

		Object BLIJE19_tree=null;
		Object DAN21_tree=null;
		Object ANDERS23_tree=null;
		Object KLAAR25_tree=null;

		try {
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:5: ( BLIJE ^ exprBin ( DAN ( sentence )+ ) ( ANDERS ( sentence )+ ) KLAAR !)
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:9: BLIJE ^ exprBin ( DAN ( sentence )+ ) ( ANDERS ( sentence )+ ) KLAAR !
			{
			root_0 = (Object)adaptor.nil();


			BLIJE19=(Token)match(input,BLIJE,FOLLOW_BLIJE_in_ifCommand1047); 
			BLIJE19_tree = (Object)adaptor.create(BLIJE19);
			root_0 = (Object)adaptor.becomeRoot(BLIJE19_tree, root_0);

			pushFollow(FOLLOW_exprBin_in_ifCommand1050);
			exprBin20=exprBin();
			state._fsp--;

			adaptor.addChild(root_0, exprBin20.getTree());

			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:24: ( DAN ( sentence )+ )
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:25: DAN ( sentence )+
			{
			DAN21=(Token)match(input,DAN,FOLLOW_DAN_in_ifCommand1053); 
			DAN21_tree = (Object)adaptor.create(DAN21);
			adaptor.addChild(root_0, DAN21_tree);

			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:29: ( sentence )+
			int cnt5=0;
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( ((LA5_0 >= BEGIN && LA5_0 <= BLIJE)||LA5_0==CHARACTER||LA5_0==HARTJE||LA5_0==LAAT||LA5_0==LPAREN||(LA5_0 >= NEGATIEF && LA5_0 <= NUMBER)||LA5_0==POSITIEF||(LA5_0 >= SMILEY && LA5_0 <= STEENTJE)||(LA5_0 >= VARIABLE && LA5_0 <= VRAAG)||LA5_0==ZEG||LA5_0==ZOLANG) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:29: sentence
					{
					pushFollow(FOLLOW_sentence_in_ifCommand1055);
					sentence22=sentence();
					state._fsp--;

					adaptor.addChild(root_0, sentence22.getTree());

					}
					break;

				default :
					if ( cnt5 >= 1 ) break loop5;
					EarlyExitException eee = new EarlyExitException(5, input);
					throw eee;
				}
				cnt5++;
			}

			}

			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:40: ( ANDERS ( sentence )+ )
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:41: ANDERS ( sentence )+
			{
			ANDERS23=(Token)match(input,ANDERS,FOLLOW_ANDERS_in_ifCommand1060); 
			ANDERS23_tree = (Object)adaptor.create(ANDERS23);
			adaptor.addChild(root_0, ANDERS23_tree);

			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:48: ( sentence )+
			int cnt6=0;
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( ((LA6_0 >= BEGIN && LA6_0 <= BLIJE)||LA6_0==CHARACTER||LA6_0==HARTJE||LA6_0==LAAT||LA6_0==LPAREN||(LA6_0 >= NEGATIEF && LA6_0 <= NUMBER)||LA6_0==POSITIEF||(LA6_0 >= SMILEY && LA6_0 <= STEENTJE)||(LA6_0 >= VARIABLE && LA6_0 <= VRAAG)||LA6_0==ZEG||LA6_0==ZOLANG) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:87:48: sentence
					{
					pushFollow(FOLLOW_sentence_in_ifCommand1062);
					sentence24=sentence();
					state._fsp--;

					adaptor.addChild(root_0, sentence24.getTree());

					}
					break;

				default :
					if ( cnt6 >= 1 ) break loop6;
					EarlyExitException eee = new EarlyExitException(6, input);
					throw eee;
				}
				cnt6++;
			}

			}

			KLAAR25=(Token)match(input,KLAAR,FOLLOW_KLAAR_in_ifCommand1066); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ifCommand"


	public static class emptyCommand_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "emptyCommand"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:90:1: emptyCommand : LAAT ^ MAAR !;
	public final LiefParser.emptyCommand_return emptyCommand() throws RecognitionException {
		LiefParser.emptyCommand_return retval = new LiefParser.emptyCommand_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token LAAT26=null;
		Token MAAR27=null;

		Object LAAT26_tree=null;
		Object MAAR27_tree=null;

		try {
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:91:5: ( LAAT ^ MAAR !)
			// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:91:9: LAAT ^ MAAR !
			{
			root_0 = (Object)adaptor.nil();


			LAAT26=(Token)match(input,LAAT,FOLLOW_LAAT_in_emptyCommand1093); 
			LAAT26_tree = (Object)adaptor.create(LAAT26);
			root_0 = (Object)adaptor.becomeRoot(LAAT26_tree, root_0);

			MAAR27=(Token)match(input,MAAR,FOLLOW_MAAR_in_emptyCommand1096); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "emptyCommand"


	public static class whileCommand_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "whileCommand"
	// C:\\Users\\Tijnoz\\Dropbox\\VB\\_eind\\Lief\\src\\lief\\grammar\\Lief.g:94:1: whileCommand : ZOLANG ^ exprBin DAN ! ( sentence )+ KLAAR !;
	public final LiefParser.whileCommand_return whileCommand() throws RecognitionException {
		LiefParser.whileCommand_return retval = new LiefParser.whileCommand_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ZOLANG28=null;
		Token DAN30=null;
		Token KLAAR32=null;
		ParserRuleReturnScope exprBin29 =null;
		ParserRuleReturnScope sentence31 =null;
